--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
