--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es2019",
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strictNullChecks": true
   },
   "exclude": [
     "node_modules"
